2015-04-18 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-accounts-book.c: renamed as src/ui/ofa-accounts-chart.c
	* src/ui/ofa-accounts-book.h: renamed as src/ui/ofa-accounts-chart.h

	* src/ui/Makefile.am,
	* src/ui/ofa-account-select.c,
	* src/ui/ofa-accounts-frame.c,
	* src/ui/ofa-accounts-frame.h,
	* src/ui/ofa-accounts-page.c: updated accordingly.

	* configure.ac: post-release version bump.

	Releasing v0.39

	* src/ui/ofa-pdf-dialog.c,
	* src/ui/ofa-pdf-dialog.h,
	* src/ui/ofa-pdf-reconcil.c,
	* src/ui/ofa-pdf-reconcil.h,
	* src/ui/ofa-print-reconcil.ui: removed files.

	* src/ui/ofa-irenderable.c,
	* src/ui/ofa-irenderable.h:
	- mainly, fix the computing of text dimensions by setting the font
	  simultaneously in both input and temp contexts.
	- ofa_irenderable_get_text_width(): new method.

	* src/ui/ofa-reconcil-bin.c,
	* src/ui/ofa-reconcil-bin.h,
	* src/ui/ofa-reconcil-bin.ui: new ofaReconcilBin class.

	* src/ui/ofa-reconcil-render.c,
	* src/ui/ofa-reconcil-render.h: new ofaReconcilRender class.

	* src/ui/ofa-main-window.c,
	* src/ui/Makefile.am,
	* src/ui/ofa-reconciliation.c: updated accordingly.

	* src/ui/ofa-view-entries.c: settlement cell is right aligned.

	* src/ui/ofa-settlement.c: settlement column header is right aligned. 

	* src/ui/ofa-exercice-close-assistant.c:
	- fix entries archiving (regression from reconciliation new model).
	- fix bat files archiving (regression from reconciliation new model).
	- RAN entries are now created in validated status.
	- previously future entries are only marked rough in in the new exercice.

	* src/mysql/ofa-mysql-idbms.c: doesn't truncate last part of database
	names which would have an underscore.

2015-04-17 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-restore-assistant.c: accept that no dossier be opened.

2015-04-16 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-backup.c: fix default folder handling (todo #806).

2015-04-13 Pierre Wieser <pwieser@trychlos.org>
