@@ -84,6 +84,8 @@ void               ofa_ledger_treeview_set_selection_mode      ( ofaLedgerTreevi
 void               ofa_ledger_treeview_set_hexpand             ( ofaLedgerTreeview *view,
 																			gboolean hexpand );
 
+GtkTreeSelection  *ofa_ledger_treeview_get_selection           ( ofaLedgerTreeview *view );
+
 GList             *ofa_ledger_treeview_get_selected            ( ofaLedgerTreeview *view );
 
 #define            ofa_ledger_treeview_free_selected(L)        g_list_free_full(( L ), ( GDestroyNotify ) g_free )
