@@ -26,7 +26,8 @@
 
  Other changes:
 
-   - ofaAccountsBook class: renamed to ofaAccountsChart (todo #816). 
+   - ofaAccountsBook class: renamed to ofaAccountsChart (todo #816).
+   - ofa_ledger_treeview_get_selection(): new method. 
 
 -----------------------------------------------------------------------
  Version 0.39
